--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "lint-staged": "^13.2.3",
     "pinst": "^3.0.0",
     "prettier": "^3.0.0"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^5.0.0"
   }
 }
