feat: add .json and .md to format

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "postpack": "pinst --enable"
   },
   "lint-staged": {
-    "*.js": [
+    "*.{js,json,md}": [
       "prettier . --write"
     ]
   },
