--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
       "prettier . --write"
     ]
   },
+  "dependencies": {
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.0"
+  },
   "devDependencies": {
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
     "pinst": "^3.0.0",
     "prettier": "^3.0.0"
-  },
-  "dependencies": {
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^5.0.0"
   }
 }
