--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
   "dependencies": {
     "eslint-config-prettier": "^8.9.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.0"
+    "eslint-plugin-prettier": "^5.0.0"
   },
   "devDependencies": {
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
     "pinst": "^3.0.0",
+    "prettier": "^3.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^8.0.0",
     "prettier": "^3.0.0"
   }
 }
