--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint",
     "config"
   ],
+  "type": "module",
   "files": [
     "index.js"
   ],
@@ -30,18 +31,22 @@
     ]
   },
   "dependencies": {
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^5.0.0"
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.26.1"
+  },
+  "peerDependencies": {
+    "eslint": "^9",
+    "prettier": "^3"
   },
   "devDependencies": {
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
     "pinst": "^3.0.0",
-    "prettier": "^3.0.0"
-  },
-  "peerDependencies": {
-    "eslint": "^8.0.0",
     "prettier": "^3.0.0"
   }
 }
